--- a/invite-friends.html
+++ b/invite-friends.html
@@ -837,7 +837,7 @@
                       elementtiming="LCP-target"
                       class="heading"
                     >
-                      <div class="_s1tlw0m">People you’ve invited</div>
+                      <div class="landing-page__faq-question">People you’ve invited</div>
                     </h1>
                     <div class="hero-banner__description">
                       The travel credit you earn can be used to book your next
