Update become-a-host link

--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -281,7 +281,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -471,7 +471,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/title.html"
+                          href="/become-a-host/title.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -479,7 +479,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/pages/become-a-host/price.html"
+                          href="/become-a-host/price.html"
                           class="btn-dark"
                           >Next
                         </a>
