--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -75,7 +75,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -415,7 +415,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/price.html"
+                          href="/become-a-host/price.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -423,7 +423,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/pages/become-a-host/preview.html"
+                          href="/become-a-host/preview.html"
                           class="btn-dark"
                           >Review your listing
                         </a>
