--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -80,7 +80,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -422,7 +422,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/legal.html"
+                          href="/become-a-host/legal.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
