--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -276,7 +276,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -464,7 +464,7 @@ Cheerful private villa with pool</textarea
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/photos.html"
+                          href="/become-a-host/photos.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -472,7 +472,7 @@ Cheerful private villa with pool</textarea
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/pages/become-a-host/description.html"
+                          href="/become-a-host/description.html"
                           class="btn-dark"
                           >Next
                         </a>
