--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -281,7 +281,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -1190,7 +1190,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/amenities.html"
+                          href="/become-a-host/amenities.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -1198,7 +1198,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/pages/become-a-host/title.html"
+                          href="/become-a-host/title.html"
                           class="btn-dark"
                           >Next
                         </a>
