--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -278,7 +278,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -606,7 +606,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/description.html"
+                          href="/become-a-host/description.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -614,7 +614,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/pages/become-a-host/legal.html"
+                          href="/become-a-host/legal.html"
                           class="btn-dark"
                           >Next
                         </a>
