--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -78,7 +78,7 @@
                           type="button"
                           class="_1pdnceg"
                         >
-                          <span class="_q6zl6">
+                          <span class="relative-opacity">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -495,7 +495,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/pages/become-a-host/intro.html"
+                          href="/become-a-host/intro.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -503,7 +503,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/pages/become-a-host/property-type.html"
+                          href="/become-a-host/property-type.html"
                           class="btn-dark"
                           >Next</a
                         >
