_1yqbv3i -> page-shell__menu-item-text

--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -88,7 +88,7 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Explore</div></a
+                            <div class="page-shell__menu-item-text">Explore</div></a
                           ><a
                             class="_45o9ez"
                             type="button"
@@ -120,7 +120,7 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Wishlists</div></a
+                            <div class="page-shell__menu-item-text">Wishlists</div></a
                           ><a
                             class="_45o9ez"
                             type="button"
@@ -149,7 +149,7 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Trips</div></a
+                            <div class="page-shell__menu-item-text">Trips</div></a
                           ><a
                             class="_45o9ez"
                             type="button"
@@ -178,7 +178,7 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Inbox</div></a
+                            <div class="page-shell__menu-item-text">Inbox</div></a
                           ><a
                             class="_1e1aumhl"
                             type="button"
