--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -63,7 +63,7 @@
                             aria-label="Explore"
                             href="/"
                             ><div class="flex">
-                              <div class="_tbbnrnx">
+                              <div class="page-shell__menu-item-icon-wrapper">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -97,7 +97,7 @@
                             aria-label="Wishlists"
                             href="/wishlists"
                             ><div class="flex">
-                              <div class="_tbbnrnx">
+                              <div class="page-shell__menu-item-icon-wrapper">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -129,7 +129,7 @@
                             aria-label="Trips"
                             href="/trips/v1"
                             ><div class="flex">
-                              <div class="_tbbnrnx" style="top: -1px">
+                              <div class="page-shell__menu-item-icon-wrapper" style="top: -1px">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -158,7 +158,7 @@
                             aria-label="Inbox"
                             href="/guest/inbox"
                             ><div class="flex">
-                              <div class="_tbbnrnx" style="top: 1px">
+                              <div class="page-shell__menu-item-icon-wrapper" style="top: 1px">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
