--- a/signup_login.html
+++ b/signup_login.html
@@ -201,6 +201,28 @@
                                       value="V4$.airbnb.com$ugfPqnTtcxg$82jSpZccUt69r0lcWKKFI_s5sIxRRGKe9WxEcvFYUb4="
                                     />
                                     <div class="_1vk19cb">
+                                      <div class="mb-6">
+                                        <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
+                                          <div class="ccmqn89 dir dir-ltr">
+                                            <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 16 16"
+                                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                                role="presentation" focusable="false"
+                                                style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                                                <path
+                                                  d="m8 12c1.1045695 0 2 .8954305 2 2s-.8954305 2-2 2-2-.8954305-2-2 .8954305-2 2-2zm1.6-12v9.6h-3.2v-9.6z">
+                                                </path>
+                                              </svg></div>
+                                          </div>
+                                          <div class="mbv7i5o dir dir-ltr">
+                                            <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                              <div class="hk7fm8a dir dir-ltr">Let's try that again</div>
+                                            </h1>
+                                            <div class="m1g17ezz h1q6ioub dir dir-ltr">That phone number is either too
+                                              short or too long. Make sure you've entered the right number and try
+                                              again.</div>
+                                          </div>
+                                        </section>
+                                      </div>
                                       <input
                                         type="hidden"
                                         name="from"
@@ -1238,10 +1260,31 @@
                                           ></span
                                         >
                                       </div>
-                                      <div
-                                        id="airlock-inline-container"
-                                        aria-live="polite"
-                                      ></div>
+                                      <div id="airlock-inline-container" aria-live="polite">
+                                        <div dir="ltr">
+                                          <div>
+                                            <div style="margin-top: 128px; margin-bottom: 64px;">
+                                              <div class="_7t0a7a">
+                                                <div class="_1vx4gysb"><svg viewBox="0 0 24 24" role="presentation"
+                                                    aria-hidden="true" focusable="false"
+                                                    style="height: 24px; width: 24px; display: block; fill: rgb(255, 255, 255);">
+                                                    <path
+                                                      d="m23.49 20.79c.39.73.12 1.64-.61 2.03-.22.12-.46.18-.71.18h-20.33c-.83 0-1.5-.67-1.5-1.5 0-.25.06-.49.18-.71l10.16-18.94c.39-.73 1.3-1 2.03-.61.26.14.47.35.61.61zm-11.05-18.47c-.05-.09-.12-.16-.2-.2-.24-.13-.55-.04-.68.2l-10.16 18.94c-.04.07-.06.15-.06.24 0 .28.22.5.5.5h20.33c.08 0 .16-.02.24-.06.24-.13.33-.43.2-.68zm-.48 4.68c-.58.02-1.04.51-1.02 1.1l.29 7.42c.01.27.23.48.5.48h.54c.27 0 .49-.21.5-.48l.29-7.42c0-.01 0-.03 0-.04 0-.58-.47-1.06-1.06-1.06-.01 0-.03 0-.04 0zm-.96 12c0 .55.45 1 1 1s1-.45 1-1-.45-1-1-1-1 .45-1 1z">
+                                                    </path>
+                                                  </svg></div>
+                                                <div class="_1n9nq7g">
+                                                  <div class="_hgs47m">
+                                                    <div class="_n5lh69r">
+                                                      <div class="_121z06r2"><span tabindex="-1">We can't send a code to
+                                                          this phone number. Try using a different one.</span></div>
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
                                       <div class="_1n35162">
                                         <button
                                           data-testid="signup-login-submit-btn"
@@ -3255,6 +3298,28 @@
                                     value="V4$.airbnb.com$gdP3em0LrCE$ovR3jip7DgQok-zydNr4HurdV6lt7gvlzQw_6ESPnWg="
                                   />
                                   <div class="_1vk19cb">
+                                    <div class="mb-6">
+                                      <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
+                                        <div class="ccmqn89 dir dir-ltr">
+                                          <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 16 16"
+                                              xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                                              focusable="false"
+                                              style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                                              <path
+                                                d="m8 12c1.1045695 0 2 .8954305 2 2s-.8954305 2-2 2-2-.8954305-2-2 .8954305-2 2-2zm1.6-12v9.6h-3.2v-9.6z">
+                                              </path>
+                                            </svg></div>
+                                        </div>
+                                        <div class="mbv7i5o dir dir-ltr">
+                                          <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                            <div class="hk7fm8a dir dir-ltr">Let's try that again</div>
+                                          </h1>
+                                          <div class="m1g17ezz h1q6ioub dir dir-ltr">That phone number is either too
+                                            short or too long. Make sure you've entered the right number and try again.
+                                          </div>
+                                        </div>
+                                      </section>
+                                    </div>
                                     <input
                                       type="hidden"
                                       name="from"
@@ -4288,6 +4353,31 @@
                                           >Privacy Policy</a
                                         ></span
                                       >
+                                    </div>
+                                    <div id="airlock-inline-container" aria-live="polite">
+                                      <div dir="ltr">
+                                        <div>
+                                          <div style="margin-top: 128px; margin-bottom: 64px;">
+                                            <div class="_7t0a7a">
+                                              <div class="_1vx4gysb"><svg viewBox="0 0 24 24" role="presentation"
+                                                  aria-hidden="true" focusable="false"
+                                                  style="height: 24px; width: 24px; display: block; fill: rgb(255, 255, 255);">
+                                                  <path
+                                                    d="m23.49 20.79c.39.73.12 1.64-.61 2.03-.22.12-.46.18-.71.18h-20.33c-.83 0-1.5-.67-1.5-1.5 0-.25.06-.49.18-.71l10.16-18.94c.39-.73 1.3-1 2.03-.61.26.14.47.35.61.61zm-11.05-18.47c-.05-.09-.12-.16-.2-.2-.24-.13-.55-.04-.68.2l-10.16 18.94c-.04.07-.06.15-.06.24 0 .28.22.5.5.5h20.33c.08 0 .16-.02.24-.06.24-.13.33-.43.2-.68zm-.48 4.68c-.58.02-1.04.51-1.02 1.1l.29 7.42c.01.27.23.48.5.48h.54c.27 0 .49-.21.5-.48l.29-7.42c0-.01 0-.03 0-.04 0-.58-.47-1.06-1.06-1.06-.01 0-.03 0-.04 0zm-.96 12c0 .55.45 1 1 1s1-.45 1-1-.45-1-1-1-1 .45-1 1z">
+                                                  </path>
+                                                </svg></div>
+                                              <div class="_1n9nq7g">
+                                                <div class="_hgs47m">
+                                                  <div class="_n5lh69r">
+                                                    <div class="_121z06r2"><span tabindex="-1">We can't send a code to
+                                                        this phone number. Try using a different one.</span></div>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
                                     </div>
                                     <div
                                       id="airlock-inline-container"
