_45o9ez -> page-shell__menu-item

--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -56,7 +56,7 @@
                       >
                         <div class="_h0klba">
                           <a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
@@ -90,7 +90,7 @@
                             </div>
                             <div class="page-shell__menu-item-text">Explore</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
@@ -122,7 +122,7 @@
                             </div>
                             <div class="page-shell__menu-item-text">Wishlists</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
@@ -151,7 +151,7 @@
                             </div>
                             <div class="page-shell__menu-item-text">Trips</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
