_h0klba -> page-shell__menu

--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -54,7 +54,7 @@
                         aria-hidden="false"
                         data-shared-element-id="tab-bar"
                       >
-                        <div class="_h0klba">
+                        <div class="page-shell__menu">
                           <a
                             class="page-shell__menu-item"
                             type="button"
