--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -302,7 +302,7 @@
                                                 >
                                                   <div class="_4626ulj">
                                                     <img
-                                                      class="_91slf2a"
+                                                      class="lite-image__default-static"
                                                       aria-hidden="true"
                                                       alt=""
                                                       decoding="async"
@@ -381,7 +381,7 @@
                                                 >
                                                   <div class="_4626ulj">
                                                     <img
-                                                      class="_91slf2a"
+                                                      class="lite-image__default-static"
                                                       aria-hidden="true"
                                                       alt=""
                                                       decoding="async"
@@ -460,7 +460,7 @@
                                                 >
                                                   <div class="_4626ulj">
                                                     <img
-                                                      class="_91slf2a"
+                                                      class="lite-image__default-static"
                                                       aria-hidden="true"
                                                       alt=""
                                                       decoding="async"
@@ -787,7 +787,7 @@
                                                   >
                                                     <div class="_4626ulj">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -868,7 +868,7 @@
                                                   >
                                                     <div class="_4626ulj">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
@@ -949,7 +949,7 @@
                                                   >
                                                     <div class="_4626ulj">
                                                       <img
-                                                        class="_91slf2a"
+                                                        class="lite-image__default-static"
                                                         aria-hidden="true"
                                                         alt=""
                                                         decoding="async"
