mq5rv0q -> max__width

--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -233,7 +233,7 @@
                                       <div class="section-container">
                                         <div
                                           style="--maxWidth: 1120px"
-                                          class="plmw1e5 mq5rv0q dir dir-ltr"
+                                          class="plmw1e5 max__width dir dir-ltr"
                                         >
                                           <div
                                             data-plugin-in-point-id="TITLE_0.21796743452375344"
@@ -266,7 +266,7 @@
                                     <div class="section-container">
                                       <div
                                         style="--maxWidth: 1120px"
-                                        class="plmw1e5 mq5rv0q dir dir-ltr"
+                                        class="plmw1e5 max__width dir dir-ltr"
                                       >
                                         <div
                                           data-plugin-in-point-id="COMPLETED_TXN_GROUP"
